--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
             <div class="row my-3">
                 <div class="col-7">
                     <div class="card text-left">
-                        <div class="card-header">Thống kê (2024)</div>
+                        <div class="card-header">Báo cáo nhập xuất hàng (2024)</div>
                         <div class="card-body">
                             <canvas id="myChart"></canvas>
                         </div>
@@ -745,34 +745,128 @@
                                 <thead class="bg-light">
                                     <tr>
                                         <th>#</th>
-                                        <th>Name</th>
-                                        <th>Title</th>
-                                        <th>Status</th>
-                                        <th>Position</th>
+                                        <th>ID sản phẩ</th>
+                                        <th>Tên</th>
+                                        <th>Số lượng | Cảnh báo</th>
+                                        </th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>3</td>
+                                        <td>1</td>
                                         <td>
                                             <div class="d-flex align-items-center">
-                                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle" />
-                                                <div class="ms-3">
-                                                    <p class="fw-bold mb-1">John Doe</p>
-                                                    <p class="text-muted mb-0">john.doe@gmail.com</p>
+                                                <div>
+                                                    <p class="fw-bold mb-1">AP-000002</p>
                                                 </div>
                                             </div>
                                         </td>
                                         <td>
-                                            <p class="fw-normal mb-1">Software engineer</p>
-                                            <p class="text-muted mb-0">IT department</p>
+                                            <p class="fw-normal mb-1">Celeron Silver N5030 15.6"</p>
                                         </td>
                                         <td>
-                                            <span class="badge badge-success rounded-pill d-inline">Active</span>
+                                            <span class="badge badge-warning rounded-pill d-inline p-2 mx-1">21 Pcs</span>
+                                            <span class="badge badge-danger rounded-pill d-inline p-2 mx-1">10 Pcs</span>
+
                                         </td>
-                                        <td>Senior</td>
 
                                     </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>
+                                            <div class="d-flex align-items-center">
+                                                <div>
+                                                    <p class="fw-bold mb-1">AP-000002</p>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <p class="fw-normal mb-1">Celeron Silver N5030 15.6"</p>
+                                        </td>
+                                        <td>
+                                            <span class="badge badge-warning rounded-pill d-inline p-2 mx-1">21 Pcs</span>
+                                            <span class="badge badge-danger rounded-pill d-inline p-2 mx-1">10 Pcs</span>
+
+                                        </td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>
+                                            <div class="d-flex align-items-center">
+                                                <div>
+                                                    <p class="fw-bold mb-1">AP-000002</p>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <p class="fw-normal mb-1">Celeron Silver N5030 15.6"</p>
+                                        </td>
+                                        <td>
+                                            <span class="badge badge-warning rounded-pill d-inline p-2 mx-1">21 Pcs</span>
+                                            <span class="badge badge-danger rounded-pill d-inline p-2 mx-1">10 Pcs</span>
+
+                                        </td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>
+                                            <div class="d-flex align-items-center">
+                                                <div>
+                                                    <p class="fw-bold mb-1">AP-000002</p>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <p class="fw-normal mb-1">Celeron Silver N5030 15.6"</p>
+                                        </td>
+                                        <td>
+                                            <span class="badge badge-warning rounded-pill d-inline p-2 mx-1">21 Pcs</span>
+                                            <span class="badge badge-danger rounded-pill d-inline p-2 mx-1">10 Pcs</span>
+
+                                        </td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>
+                                            <div class="d-flex align-items-center">
+                                                <div>
+                                                    <p class="fw-bold mb-1">AP-000002</p>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <p class="fw-normal mb-1">Celeron Silver N5030 15.6"</p>
+                                        </td>
+                                        <td>
+                                            <span class="badge badge-warning rounded-pill d-inline p-2 mx-1">21 Pcs</span>
+                                            <span class="badge badge-danger rounded-pill d-inline p-2 mx-1">10 Pcs</span>
+
+                                        </td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>
+                                            <div class="d-flex align-items-center">
+                                                <div>
+                                                    <p class="fw-bold mb-1">AP-000002</p>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <p class="fw-normal mb-1">Celeron Silver N5030 15.6"</p>
+                                        </td>
+                                        <td>
+                                            <span class="badge badge-warning rounded-pill d-inline p-2 mx-1">21 Pcs</span>
+                                            <span class="badge badge-danger rounded-pill d-inline p-2 mx-1">10 Pcs</span>
+
+                                        </td>
+
+                                    </tr>
+
                                 </tbody>
                             </table>
                         </div>
@@ -780,7 +874,7 @@
                 </div>
                 <div class="col-5">
                     <div class="card text-left">
-                        <div class="card-header">Báo cáo nhập xuất hàng (2024)</div>
+                        <div class="card-header">Thống kê (2024)</div>
                         <div class="card-body">
                             <canvas id="myChart2"></canvas>
                         </div>
