--- a/src/index.html
+++ b/src/index.html
@@ -908,11 +908,11 @@
         data: {
             labels: ['Tháng 1', 'Tháng 2', 'Tháng 3', 'Tháng 4', 'Tháng 5', 'Tháng 6'],
             datasets: [{
-                label: 'Số lượng A',
+                label: 'Số lượng Nhập',
                 data: [12, 19, 3, 5, 2, 3], // Dữ liệu cho cột thứ nhất
                 borderWidth: 1
             }, {
-                label: 'Số lượng B',
+                label: 'Số lượng Xuất',
                 data: [7, 11, 5, 8, 6, 4], // Dữ liệu cho cột thứ hai
                 borderWidth: 1
             }]
@@ -934,15 +934,31 @@
         data: {
             labels: ['Tháng 1', 'Tháng 2', 'Tháng 3', 'Tháng 4', 'Tháng 5', 'Tháng 6'],
             datasets: [{
-                label: 'Số lượng A',
-                data: [12, 19, 3, 5, 2, 3], // Dữ liệu cho cột thứ nhất
+                label: 'Chi phí nhập hàng ',
+                data: [80000, 10000, 50000, 150000, 120000, 100000], // Dữ liệu cho cột thứ nhất
                 borderWidth: 1
             }]
         },
         options: {
             scales: {
                 y: {
-                    beginAtZero: true
+                    beginAtZero: true,
+                    ticks: {
+                        callback: function(value, index, values) {
+                            return value.toLocaleString('en-US', {
+                                minimumFractionDigits: 0
+                            }) + ' vnđ';
+                        }
+                    }
+                }
+            },
+            plugins: {
+                tooltip: {
+                    callbacks: {
+                        label: function(context) {
+                            return context.dataset.label + ': ' + context.formattedValue + ' vnđ';
+                        }
+                    }
                 }
             }
         }
